tests/sources/invalid/borrow/memory_errors.fire
// Memory/ownership error tests
// Tests for use-after-move, invalid borrows, etc.

import @firescript/std.io.println;

// Use after move (if ownership is enforced)
owned: string = "hello";
moved: string = owned;  // Move
println(owned);  // Error: used after move  //~ ERROR FS-SEM-0001 @9

fn badBorrowReturn(s: &string) -> string {
	return s;  // Error: borrowed value escapes callable scope  //~ ERROR FS-SEM-0001 @9
}

source: string = "borrow";
escaped: string = badBorrowReturn(source);
println(escaped);

// Multiple mutable borrows (if borrow checking is enforced)
// &mut int32 borrow1 = &mut x;
// &mut int32 borrow2 = &mut x;  // Error: already borrowed mutably

// Use after free (if manual memory management)
// This would be caught by the compiler in a safe language

// Return reference to local variable
// &int32 badReference() {
//     int32 local = 42;
//     return &local;  // Error: returns reference to local
// }

// Array out of bounds (compile-time if possible)
small: int32[] = [1, 2, 3];
bad: int32 = small[10];  // Runtime error, but could be compile-time in some cases

println("memory error tests");
